added more grunt files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1 class="text-primary jumbotron">Welcome to News Api </h1>
+    <img src="images/image1.jpg" alt="image">
+    <img src="images/image2.jpg" alt="image">
+
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
