--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
         </select>
 
 
-        <select id="source" class="col mr-5 px-3 text-dark" name="source">
+        <select id="language" class="col mr-5 px-3 text-dark" name="source">
           <!-- <option value="" disabled selected>Source</option> -->
-          <option value="choose">Source</option>
-          <option value="abc-news-au">ABC NEWS</option>
-          <option value="bbc-new">BBC NEWS</option>
-          <option value="fox-news">FOX NEWS</option>
-          <option value="spiegel-online">Speigel Online</option>
+          <option value="choose">Language</option>
+          <option value="en">English</option>
+          <option value="es">Spanish</option>
+          <option value="fr">French</option>
+          <option value="zh">Chinese</option>
         </select>
 
 
